# zephyr-project

lcd_ssd1306/: CMakeLists.txt  Kconfig  README.md  prj.conf
lcd_ssd1306/.cache/clangd/index/: logo_image.h.2A483A18BB1A2DA1.idx  main.c.6479FD2910063F35.idx
lcd_ssd1306/boards/: esp32_devkitc_wroom.overlay
lcd_ssd1306/src/: logo_image.h  main.c
